fix spacing

--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -55,7 +55,7 @@ body {
 
 @media (min-width: 650px) {
     .flex-row-centered-responsive {
-        justify-content: flex-start;  /* Aligns items to the start */
+        justify-content: flex-start; 
     }
     .flex-row-responsive{
         display: flex;
@@ -76,12 +76,16 @@ body {
     padding-top: 10px;
 }
 
+.padding-top-pokedex{
+    padding-top: 20px;
+}
+
 .flex-column-center{
     padding-top: 150px;
 }
 
 .pokedex-image {
-    width: 200%;  /* Set the width of the image */
-    height: 100%;  /* Set the height of the image */
+    width: 100%;  
+    height: 100%;  
   }
 
